--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "axios": "^0.19.0",
     "prop-types": "^15.7.2",
     "react": "16.9.0",
-    "react-native": "0.61.2",
+    "react-native": "0.60.5",
     "react-native-gesture-handler": "^1.4.1",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^1.3.0",
+    "react-native-shimmer-placeholder": "^1.0.35",
     "react-native-vector-icons": "^6.6.0",
+    "react-native-webview": "^7.4.2",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.9.4",
     "reactotron-react-native": "^4.0.2",
